# bbl-shutter-cam

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  bbl-shutter-cam.spec  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: lint.yml  pr-policy.yml  pr-title.yml  release.yml  test.yml
docs/: Gemfile  README.md  _config.yml  faq.md  index.md  troubleshooting.md
docs/advanced/: building-executables.md  extending.md  headless-operation.md  systemd-service.md  web-streaming.md
docs/features/: signal-discovery.md
docs/installation/: bluetooth-setup.md  requirements.md  setup-pi.md  troubleshoot-setup.md
docs/user-guide/: camera-settings.md  profiles.md  quick-start.md
examples/: config.example  config.minimal.toml
scripts/: build.bat  build.sh  debug_ble_traffic.py  install_deps_pi.sh  pyinstaller_entry.py
src/bbl_shutter_cam/: __init__.py  ble.py  camera.py  cli.py  config.py  discover.py  logging_config.py  tune.py  util.py
tests/: __init__.py  test_ble.py  test_camera.py  test_cli.py  test_config.py  test_discover.py  test_logging_config.py  test_tune.py  test_util.py
