[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbl-shutter-cam"
version = "0.1.0"
description = "Use a Bambu Cyberbrick BBL_SHUTTER BLE trigger to capture photos on Raspberry Pi (rpicam-still)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Casa Taylor" }]
keywords = ["raspberry-pi", "bluetooth", "ble", "timelapse", "bambu", "rpicam"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Capture",
  "Topic :: Utilities",
]
dependencies = [
  "bleak>=0.22.0,<0.23",
  "tomlkit>=0.12.0,<0.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<8",
  "pytest-cov>=4.0,<5",
  "black>=23.0,<24",
  "pylint>=2.17,<3",
  "mypy>=1.0,<2",
  "pyinstaller>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/bodybybuddha/bbl-shutter-cam"
Repository = "https://github.com/bodybybuddha/bbl-shutter-cam"

[project.scripts]
bbl-shutter-cam = "bbl_shutter_cam.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
