[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbl-shutter-cam"
version = "1.0.1"
description = "Use a Bambu Cyberbrick BBL_SHUTTER BLE trigger to capture photos on Raspberry Pi (rpicam-still)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Casa Taylor" }]
keywords = ["raspberry-pi", "bluetooth", "ble", "timelapse", "bambu", "rpicam"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Graphics :: Capture",
  "Topic :: Utilities",
]
dependencies = [
  "bleak>=0.22.0,<1.2",
  "tomlkit>=0.12.0,<0.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0,<9",
  "pytest-cov>=4.0,<8",
  "black>=23.0,<24",
  "pylint>=2.17,<3",
  "mypy>=1.0,<2",
  "pyinstaller>=6.0,<7",
]

[project.urls]
Homepage = "https://github.com/bodybybuddha/bbl-shutter-cam"
Repository = "https://github.com/bodybybuddha/bbl-shutter-cam"

[project.scripts]
bbl-shutter-cam = "bbl_shutter_cam.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.pylint.messages_control]
disable = [
  "C0103",  # invalid-name
  "C0114",  # missing-module-docstring
  "C0209",  # consider-using-f-string
  "C0301",  # line-too-long
  "C0415",  # import-outside-toplevel
  "R0913",  # too-many-arguments
  "R0902",  # too-many-instance-attributes
  "R0912",  # too-many-branches
  "R0914",  # too-many-locals
  "R0915",  # too-many-statements
  "W0718",  # broad-exception-caught
  "W1309",  # f-string-without-interpolation
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-attributes = 10

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
exclude = [
  "^venv/",
  "^\\.venv/",
  "^build/",
  "^dist/",
]
